template extending source py files, chunking dataset, estimating amount of workers...
@todo apply manifests

--- a/Manager_service/kube/templates/py_mappersource_extention.template
+++ b/Manager_service/kube/templates/py_mappersource_extention.template
@@ -1,13 +1,9 @@
-def mapper(arr):
-
-    return [(word, 1) for word in arr]
-
 
 
 if __name__ == "__main__":
     
-    input_data_path = "word_count_data.txt"
-    output_data_path = "test.out"
+    input_data_path = "{input_data_path}"
+    output_data_path = "{output_data_path}"
 
     with open(input_data_path, 'r') as inp:
         lines = inp.readlines()
@@ -26,8 +22,8 @@ if __name__ == "__main__":
                 cols = len(res)
                 for i, item in enumerate(res):
                     if j == rows - 1 and i == cols - 1:
-                        out.write(f'("{item[0]}", {item[1]})')
+                        out.write(f'("{{item[0]}}", {{item[1]}})')
                     else:
-                        out.write(f'("{item[0]}", {item[1]}),\n\t')
+                        out.write(f'("{{item[0]}}", {{item[1]}}),\n\t')
                 
             out.write("\n]")
