template extending source py files, chunking dataset, estimating amount of workers..

--- a/Manager_service/kube/templates/Dockerfile.py.template
+++ b/Manager_service/kube/templates/Dockerfile.py.template
@@ -5,6 +5,11 @@ RUN python3 -m pip install --upgrade pip
 # COPY /templates/requirements.txt ./
 # RUN pip install -r requirements.txt
 
+# RUN mkdir ./data
+# copy input/output paths?
+# COPY {input_path} ./data/input_path
+# COPY {output_path} ./data/output_path
+
 
 COPY {script_path} /{script_name}
 
