--- a/Manager_service/kube/templates/py_mappersource_extention.template
+++ b/Manager_service/kube/templates/py_mappersource_extention.template
@@ -1,9 +1,16 @@
 
 
 if __name__ == "__main__":
+
+    import argparse    
+
+    parser = argparse.ArgumentParser(description="Process input and output paths")
+    parser.add_argument('-i', '--input', type=str, default="{input_data_path}", help='Input data file path')
+    parser.add_argument('-o', '--output', type=str, default="{output_data_path}", help='Output data file path')
+    args = parser.parse_args()
     
-    input_data_path = "{input_data_path}"
-    output_data_path = "{output_data_path}"
+    input_data_path = args.input
+    output_data_path = args.output
 
     with open(input_data_path, 'r') as inp:
         lines = inp.readlines()
