--- a/Manager_service/kube/manifests/mapper-job.yaml
+++ b/Manager_service/kube/manifests/mapper-job.yaml
@@ -1,45 +1,41 @@
-apiVersion: v1
-kind: Service
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: mappers
-  labels:
-    app: mappers
+  name: mapper-job
 spec:
-  ports:
-    - port: 8080
-      name: mapper
-  clusterIP: None
-  selector:
-    app: mappers
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: mapper
-spec:
-  serviceName: "mappers"
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mappers
+  completions: 1  # Total number of mapper jobs to complete
+  parallelism: 1  # Number of mapper jobs to run in parallel
+  completionMode: Indexed
   template:
     metadata:
       labels:
         app: mappers
     spec:
       containers:
-        - name: mapreduce
-          imagePullPolicy: IfNotPresent
-          image: mapper:latest
-          command: ["sh", "-c", "cp /mnt/data/mapper_input.py /mapper_input.py && python3 /mapper_skeleton.py -i /mnt/data/mapper/in/mapper.in -o /mnt/data/shuffler/in/mapper.out"]
-          #command: ["python3"]
-          #args: ["/mapper_skeleton.py", "-i", "/mnt/data/mapper/in/mapper.in", "-o", "/mnt/data/shuffler/in/mapper.out"]
-          ports:
-            - containerPort: 8080
-              name: mapper
-          volumeMounts:
-            - mountPath: "/mnt/data/"
-              name: mapper-storage
+      - name: mapreduce
+        image: mapper:latest
+        imagePullPolicy: IfNotPresent
+        command:
+          [
+            "sh", "-c",
+            'echo "${MYFUNC}" > /mapper_input.py && python3 /mapper_skeleton.py -i /mnt/data/mapper/in/mapper-$(JOB_INDEX).in -o /mnt/data/reducer/in/mapper-$(JOB_INDEX).out'
+          ]
+        ports:
+        - containerPort: 8080
+          name: mapper
+        volumeMounts:
+        - mountPath: "/mnt/data/"
+          name: mapper-storage
+        env:
+        - name: JOB_INDEX
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['batch.kubernetes.io/job-completion-index']
+        - name: MYFUNC
+          value: |
+            def mapper(arr):
+              return [(word, 1) for word in arr]
+      restartPolicy: OnFailure
       volumes:
       - name: mapper-storage
         persistentVolumeClaim:
