--- a/Manager_service/kube/manifests/mapper-job.yaml
+++ b/Manager_service/kube/manifests/mapper-job.yaml
@@ -3,8 +3,8 @@ kind: Job
 metadata:
   name: mapper-job
 spec:
-  completions: 1  # Total number of mapper jobs to complete
-  parallelism: 1  # Number of mapper jobs to run in parallel
+  completions: 3  # Total number of mapper jobs to complete
+  parallelism: 3  # Number of mapper jobs to run in parallel
   completionMode: Indexed
   template:
     metadata:
@@ -25,7 +25,7 @@ spec:
           name: mapper
         volumeMounts:
         - mountPath: "/mnt/data/"
-          name: mapper-storage
+          name: manager-storage
         env:
         - name: JOB_INDEX
           valueFrom:
@@ -37,6 +37,6 @@ spec:
               return [(word, 1) for word in arr]
       restartPolicy: OnFailure
       volumes:
-      - name: mapper-storage
+      - name: manager-storage
         persistentVolumeClaim:
           claimName: keep-alive-pod-pvc
