--- a/test-pod.yaml
+++ b/test-pod.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: keep-alive-pod
+  name: test
 spec:
-  serviceAccountName: job-creator-sa  # Service account added here
   containers:
-  - name: keep-alive-container
-    image: python:3.9
+  - name: test
+    image: python:latest
     command: ["/bin/sh"]
     args: ["-c", "while true; do sleep 3600; done"]
     resources:
