--- a/manifests/manager-manifest.yaml
+++ b/manifests/manager-manifest.yaml
@@ -12,7 +12,7 @@ metadata:
 rules:
 - apiGroups: ["batch"]
   resources: ["jobs"]
-  verbs: ["create", "get", "list", "watch"]
+  verbs: ["create", "get", "list", "watch", "delete", "deletecollection", "patch", "update"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
