--- a/manifests/ui-auth-manifest.yaml
+++ b/manifests/ui-auth-manifest.yaml
@@ -1,7 +1,31 @@
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: endpoints-reader
+rules:
+- apiGroups: [""]
+  resources: ["endpoints"]
+  verbs: ["get", "list", "watch"]
+
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: endpoints-reader-binding
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: dpyravlos
+roleRef:
+  kind: ClusterRole
+  name: endpoints-reader
+  apiGroup: rbac.authorization.k8s.io
+
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: default
+  namespace: dpyravlos
   name: service-reader
 rules:
 - apiGroups: [""]
@@ -12,11 +36,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: service-reader-binding
-  namespace: default
+  namespace: dpyravlos
 subjects:
 - kind: ServiceAccount
-  name: default  # replace this if your pods use a different service account
-  namespace: default
+  name: dpyravlos # replace this if your pods use a different service account
+  namespace: dpyravlos
 roleRef:
   kind: Role
   name: service-reader
@@ -25,48 +49,8 @@ roleRef:
 apiVersion: v1
 kind: Service
 metadata:
-  name: authservice
-spec:
-  type: NodePort
-  selector:
-    app: authservice
-  ports:
-    - protocol: TCP
-      port: 1337  # External port you want to expose
-      targetPort: 1337  # Port on which authservice is running within the pod
-      nodePort: 30001
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: authservice
-spec:
-  replicas: 1  # Adjust the number of replicas as needed
-  selector:
-    matchLabels:
-      app: authservice
-  template:
-    metadata:
-      labels:
-        app: authservice
-    spec:
-      containers:
-      - name: authservice
-        image: authservice:v1  # Use the image tag you built
-        ports:
-        - containerPort: 1337  # Ensure this matches the exposed port in your Dockerfile
-        resources:
-          requests:
-            cpu: "0.1"  # Request 0.1 CPU cores
-            memory: "100Mi"  # Request 100 MiB memory
-          limits:
-            cpu: "0.5"  # Limit to 0.5 CPU cores
-            memory: "500Mi"  # Limit to 500 MiB memory
----
-apiVersion: v1
-kind: Service
-metadata:
   name: uiservice
+  namespace: dpyravlos
 spec:
   type: NodePort
   selector:
@@ -81,6 +65,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: uiservice
+  namespace: dpyravlos
 spec:
   replicas: 1  # Adjust the number of replicas as needed
   selector:
@@ -93,9 +78,9 @@ spec:
     spec:
       containers:
       - name: uiservice
-        image: uiservice:v1  # Replace with your actual image and tag
+        image: gkonofaos/uiservice:latest  # Replace with your actual image and tag
         ports:
-        - containerPort: 1338  # Port your application listens on inside the container
+          - containerPort: 1338  # Port your application listens on inside the container
         resources:
           requests:
             cpu: "0.1"  # Request 0.1 CPU cores
@@ -103,7 +88,48 @@ spec:
           limits:
             cpu: "0.5"  # Limit to 0.5 CPU cores
             memory: "500Mi"  # Limit to 500 MiB memory
-
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: authservice
+  namespace: dpyravlos
+spec:
+  type: NodePort
+  selector:
+    app: authservice
+  ports:
+    - protocol: TCP
+      port: 1337  # External port you want to expose
+      targetPort: 1337  # Port on which authservice is running within the pod
+      nodePort: 30003
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: authservice
+  namespace: dpyravlos
+spec:
+  replicas: 1  # Adjust the number of replicas as needed
+  selector:
+    matchLabels:
+      app: authservice
+  template:
+    metadata:
+      labels:
+        app: authservice
+    spec:
+      containers:
+      - name: authservice
+        image: gkonofaos/authservice:latest  # Use the image tag you built
+        ports:
+        - containerPort: 1337  # Ensure this matches the exposed port in your Dockerfile
+        resources:
+          requests:
+            cpu: "0.1"  # Request 0.1 CPU cores
+            memory: "100Mi"  # Request 100 MiB memory
+          limits:
+            cpu: "0.5"  # Limit to 0.5 CPU cores
+            memory: "500Mi"  # Limit to 500 MiB memory
 
 
