--- a/Manager_service/Dockerfile.manager
+++ b/Manager_service/Dockerfile.manager
@@ -5,6 +5,7 @@ WORKDIR /
 COPY / .
 
 RUN python3 -m pip install --upgrade pip 
+RUN pip install protobuf==3.20.1
 RUN pip install --no-cache-dir -r requirements.txt
 
 
