--- a/manifests/manager-manifest.yaml
+++ b/manifests/manager-manifest.yaml
@@ -10,6 +10,15 @@ metadata:
   namespace: default
   name: job-creator
 rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list"]
+- apiGroups: [""]
+  resources: ["endpoints"]
+  verbs: ["get", "list"]
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["get", "list"]
 - apiGroups: ["batch"]
   resources: ["jobs"]
   verbs: ["create", "get", "list", "watch", "delete", "deletecollection", "patch", "update"]
