--- a/manifests/etcd-manifest.yaml
+++ b/manifests/etcd-manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: etcd
+  namespace: dpyravlos
   labels:
     app: etcd
 spec:
@@ -18,9 +19,10 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: etcd
+  namespace: dpyravlos
 spec:
   serviceName: "etcd"
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: etcd
@@ -36,11 +38,11 @@ spec:
         - name: ETCD_DATA_DIR
           value: /var/lib/etcd
         - name: ETCD_ADVERTISE_CLIENT_URLS
-          value: http://etcd:2379
+          value: http://$(HOSTNAME).etcd:2379
         - name: ETCD_LISTEN_CLIENT_URLS
           value: http://0.0.0.0:2379
         - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
-          value: http://etcd:2380
+          value: http://$(HOSTNAME).etcd:2380
         - name: ETCD_LISTEN_PEER_URLS
           value: http://0.0.0.0:2380
         - name: ETCD_INITIAL_CLUSTER
@@ -63,11 +65,12 @@ spec:
           mountPath: /var/lib/etcd
         resources:
           requests:
-            cpu: "0.1"  # Request 0.1 CPU cores
-            memory: "100Mi"  # Request 100 MiB memory
+            cpu: "0.1"
+            memory: "100Mi"
   volumeClaimTemplates:
   - metadata:
       name: etcd-data
+      namespace: dpyravlos
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
