--- a/manifests/etcd-manifest.yaml
+++ b/manifests/etcd-manifest.yaml
@@ -89,8 +89,11 @@ spec:
           mountPath: /var/lib/etcd
         resources:
           requests:
-            cpu: "0.1"
-            memory: "100Mi"
+            cpu: "600m"
+            memory: "1000Mi"
+          limits:
+            cpu: "600m"
+            memory: "1500Mi"
   volumeClaimTemplates:
   - metadata:
       name: etcd-data
