--- a/manifests/etcd-manifest.yaml
+++ b/manifests/etcd-manifest.yaml
@@ -62,7 +62,7 @@ spec:
         - name: etcd-data
           mountPath: /var/lib/etcd
         resources:
-          requests:
+          limits:
             cpu: "0.1"  # Request 0.1 CPU cores
             memory: "100Mi"  # Request 100 MiB memory
   volumeClaimTemplates:
